# LightGlue-ONNX

./: .gitignore  LICENSE  README.md  check_and_run_model.py  check_model.py  dynamo.py  export.py  optimize.py  pyproject.toml  simplify.py
lightglue/: lightglue.py  superpoint.py  viz2d.py
lightglue_dynamo/: cli_utils.py  config.py  viz.py
lightglue_dynamo/models/: __init__.py  lightglue.py  pipeline.py  superpoint.py
lightglue_dynamo/models/disk/: __init__.py  blocks.py  disk.py  unet.py
lightglue_dynamo/ops/: __init__.py  multi_head_attention.py
lightglue_dynamo/preprocessors/: __init__.py  disk.py  superpoint.py
lightglue_onnx/: __init__.py  end2end.py  lightglue.py  sift.py  superpoint_open.py  utils.py
lightglue_onnx/ops/: sdpa.py
onnx_runner/: lightglue.py
